--- a/plugins/revolution/revolution/css/navigation.css
+++ b/plugins/revolution/revolution/css/navigation.css
@@ -991,7 +991,7 @@ email:      info@themepunch.com
 website:    http://www.themepunch.com
 -----------------------------------------------------------------------------*/
 /* ARROWS */
-.hades.tparrows {
+/* .hades.tparrows {
 	cursor:pointer;
 	background:#000;
 	background:rgba(0,0,0,0.15);
@@ -1072,7 +1072,7 @@ website:    http://www.themepunch.com
 .hades .tp-arr-titleholder {
 }
 .hades .tp-arr-subtitleholder {
-}
+} */
 
 
 /* BULLETS */
