--- a/css/style.css
+++ b/css/style.css
@@ -15021,3 +15021,49 @@ margin-bottom:0px;}
 	color: white;
 
 }
+
+
+/*whatapp*/
+  .wa-float {
+    position: fixed;
+    bottom: 50px;
+    right: 20px;
+    width: 65px;
+    height: 65px;
+    background: #1FAF38; /* Custom green color */
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    box-shadow: 0 8px 25px rgba(0,0,0,0.25);
+    z-index: 9999;
+    cursor: pointer;
+    animation: pulse 1.8s infinite;
+  }
+
+  /* Transparent WhatsApp icon */
+  .wa-float svg {
+    width: 36px;
+    height: 36px;
+
+	background: #1FAF38;
+
+  }
+
+  /* Pulse animation */
+  @keyframes pulse {
+    0% { transform: scale(1); box-shadow: 0 0 0 0 rgba(31,175,56,0.6); }
+    70% { transform: scale(1.08); box-shadow: 0 0 0 15px rgba(31,175,56,0); }
+    100% { transform: scale(1); box-shadow: 0 0 0 0 rgba(31,175,56,0); }
+  }
+
+  /* Mobile size */
+  @media(max-width:480px){
+    .wa-float{
+      width: 58px;
+      height: 58px;
+      bottom: 16px;
+      right: 16px;
+    }
+    .wa-float svg { width: 30px; height: 30px; }
+  }
